@@ -16,10 +16,11 @@ public class Card {
     }
 
     public static void main(String[] args) {
-        Stream.of(Value.values())
-                .flatMap(value -> Stream.of(Suit.values())
-                        .map(suit1  -> new Card(suit1, value)))
-                .collect(Collectors.toList()).forEach(System.out::println);
+        Stream.of(Suit.values())
+                .flatMap(suit -> Stream.of(Value.values())
+                        .map(value -> new Card(suit, value)))
+                .toList()
+                .forEach(System.out::println);
     }
 
     @Override
